--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main-user.js"></script>
+    <script type="module" src="/src/main-admin.js"></script>
   </body>
 </html>
